# skill-context-system

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  conftest.py
.claude/: ralph-loop.local.md
.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/: bug.md  enhancement.md
artifacts/research/: 2026-02-15-source-quality-and-cross-validation-deep-dive.md  2026-02-16-agent-context-effectiveness-deep-dive.md
dewey/: .gitignore  README.md  pyproject.toml  setup.py  validate-plugin.py
dewey/.claude-plugin/: plugin.json
dewey/commands/: analyze.md  check.md  optimize.md  report.md  split.md
dewey/scripts/: identify-large-files.py
dewey/skills/analyze/: SKILL.md
dewey/skills/curate/: SKILL.md
dewey/skills/curate/references/: source-evaluation.md
dewey/skills/curate/scripts/: config.py  create_topic.py  promote.py  propose.py  scaffold.py  templates.py
dewey/skills/curate/workflows/: curate-add.md  curate-ingest.md  curate-promote.md  curate-propose.md
dewey/skills/explore/: SKILL.md
dewey/skills/explore/workflows/: explore-discovery.md
dewey/skills/health/: SKILL.md
dewey/skills/health/references/: quality-dimensions.md  validation-rules.md
dewey/skills/health/scripts/: auto_fix.py  check_kb.py  cross_validators.py  history.py  hook_log_access.py  log_access.py  utilization.py  validators.py
dewey/skills/health/workflows/: health-audit.md  health-check.md  health-coverage.md  health-freshness.md  health-review.md
dewey/skills/init/: SKILL.md
dewey/skills/init/references/: kb-spec-summary.md
dewey/skills/init/scripts/: scaffold.py  templates.py
dewey/skills/init/workflows/: init.md
dewey/src/: __init__.py
dewey/src/dewey/core/compaction/: file_splitter.py  skill_splitter.py
dewey/src/dewey/skills/: __init__.py  analyze_skill.py
dewey/tests/: test_analyze_skill.py  test_compaction.py  test_measurement.py
docs/plans/: 2026-02-15-health-feedback-loop-design.md  2026-02-15-health-feedback-loop-implementation.md  2026-02-15-index-rebuild-implementation.md  2026-02-15-utilization-auto-capture.md  2026-02-15-utilization-recommendations-implementation.md
scripts/: analyze-usage.py  identify-large-files.py
skills/analyze/: SKILL.md
skills/analyze/references/: analysis-metrics.md  context-best-practices.md  issue-detection.md  token-optimization.md
skills/analyze/scripts/: analyze_directory.py  token_counter.py
skills/analyze/workflows/: analyze-baseline.md  analyze-compare.md  analyze-detailed.md  analyze-standard.md
skills/check/: SKILL.md
skills/check/references/: exit-codes.md  quality-criteria.md  validation-rules.md
skills/check/scripts/: check_quality.py
skills/curate/: SKILL.md
skills/init/: SKILL.md
skills/report/: SKILL.md
skills/split/: SKILL.md
tests/integration/: test_kb_lifecycle.py
(+34 files in other folders)
